--- a/lotfresh-front/src/assets/main.css
+++ b/lotfresh-front/src/assets/main.css
@@ -1,3 +1,5 @@
+/* @import "./base.css"; 안쓸것.*/
+
 @font-face {
   font-family: "TheJamsil";
   src: url("./fonts/The_Jamsil_OTF_1_Thin.otf") format("opentype");
